--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Multiplayer buzzer system for quiz bowl"
+      content="Wizziq Buzzer"
     />
-    <meta property="og:title" content="Multibuzzer" />
-    <meta property="og:url" content="https://www.multibuzz.app" />
+    <meta property="og:title" content="Wizziq Buzzer" />
+    <meta property="og:url" content="https://buzzer.wizziq.nl" />
     <meta property="og:image" content="%PUBLIC_URL%/social.png" />
     <meta property="og:type" content="website" />
     <meta
       property="og:description"
-      content="Free online multiplayer buzzer system. Perfect for trivia night, quiz bowl, classrooms, and more."
+      content="Wizziq Buzzersysteem"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:image" content="%PUBLIC_URL%/twitter.png" />
-    <meta name="twitter:title" content="Multibuzzer" />
+    <meta name="twitter:title" content="Wizziq Buzzer" />
     <meta
       name="twitter:description"
-      content="Free online multiplayer buzzer system. Perfect for trivia night, quiz bowl, classrooms, and more."
+      content="Wizziq Buzzersysteem."
     />
 
     <!-- FAVICON -->
@@ -71,11 +71,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Multibuzzer</title>
-    <meta name="title" content="Multibuzzer" />
+    <title>Wizziq Buzzer</title>
+    <meta name="title" content="Wizziq Buzzer" />
     <meta
       name="description"
-      content="Free online multiplayer buzzer system. Perfect for trivia night, quiz bowl, classrooms, and more."
+      content="Wizziq Buzzersysteem."
     />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
